--- a/style/global.scss
+++ b/style/global.scss
@@ -2,4 +2,11 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-size: 16px;
+}
+
+body {
+  height: 100vh;
+  display: grid;
+  place-items: center;
 }
