--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -2,23 +2,30 @@
   button {
     width: 48px;
     height: 48px;
-    border: 1px solid #79b5d6;
+    border: 1px solid #1e9fd2;
     border-radius: 6px;
     background-color: #fff;
-    vertical-align: middle;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    & span {
+      height: 30px;
+    }
 
     &[data-disabled='false'] {
       &:hover {
         cursor: pointer;
-        background-color: #ecf4f9;
+        background-color: #f0fdff;
       }
       &:active {
-        background-color: #d0e5f2;
+        background-color: #c7f7ff;
       }
     }
 
     &[data-disabled='true'] {
-      border: 1px solid #c0c0c0;
+      opacity: 0.48;
+      cursor: not-allowed;
     }
   }
 }
