--- a/src/components/roomAllocation/roomAllocation.scss
+++ b/src/components/roomAllocation/roomAllocation.scss
@@ -1,6 +1,8 @@
 .roomAllocation-root {
+  color: #262626;
   padding: 20px 10px 0;
   width: fit-content;
+
   &__room-info-wrap {
     .total-guest-room {
       font-size: 18px;
@@ -8,7 +10,7 @@
     }
 
     .yet-distribute-counter {
-      background-color: #effdff;
+      background-color: #f0fdff;
       border: 2px solid #cbedff;
       border-radius: 4px;
       padding: 12px;
@@ -21,7 +23,7 @@
       padding-bottom: 10px;
 
       &:not(:last-child) {
-        border-bottom: 1px solid #ededed;
+        border-bottom: 1px solid #e8e8e8;
       }
       .counter {
         font-size: 18px;
@@ -37,7 +39,8 @@
           margin-right: 120px;
 
           span {
-            color: #a2a2a2;
+            font-size: 14px;
+            color: #8c8c8c;
           }
         }
       }
